--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BASE_URL="http://localhost:${PORT}"
 PORT=3000
+NODE_ENV="development"
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 
 CLOUDINARY_CLOUD_NAME=
