--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.7.0",
+    "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "streamifier": "^0.1.1"
@@ -41,6 +45,7 @@
     "@types/jest": "29.2.4",
     "@types/multer": "^1.4.11",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.13",
     "@types/streamifier": "^0.1.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
