add bot verifier endpoint

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ NODE_ENV="development"
 JWT_SECRET=
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 
+GOOGLE_SECRET_KEY=
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
